Updates job status to reflect the fact that I'm not actively looking for a new job

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							Allow me to tell you a little about myself. I started making websites when I was 15 (circa 2004) as a hobby and ever since then I've had an insatiable passion for web development. I graduated from <a href="http://www.smu.edu/lyle" title="Visit the SMU Lyle School of Engineering Hompage">Southern Methodist University</a> in 2011 with a B.S. in Computer Science. I'm deeply interested in web development and I love to learn new things. I also like cats, beer, and crafts.
 						</p>
 						<p>
-							I am currently working at <a href="http://www.fossilgroup.com/">Fossil Group</a> as part of the Mobile Team, but I am actively searching for a new opportunity. I am most passionate about JavaScript development (especially on the backend), but my skills are far more diverse. Check out my r&eacute;sum&eacute;!
+							I am currently working at <a href="http://www.fossilgroup.com/">Fossil Group</a> as part of the Mobile Team. I am most passionate about JavaScript development (especially on the backend), but my skills are far more diverse. Check out my r&eacute;sum&eacute;!
 						</p>
 					</div>
 					<div class="hero-buttons">
