--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/main.js"></script>
 
+		<!-- <script src="http://localhost:35729/livereload.js"></script> -->
+
 	</body>
 
 </html>
