Updates resumes to use abridged versions

--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
           </div>
           <div class="hero-buttons">
             <div class="btn-resume btn-group">
-              <a class="btn btn-primary btn-large" href="https://docs.google.com/document/d/1SsmQ_1KQAot6FDbMrElkU4HYG0K92eYFnmt-3F2ah3w/edit?usp=sharing">
+              <a class="btn btn-primary btn-large" href="https://docs.google.com/document/d/1EI7sPYWUrqeFTrZaGwY9FRS4ekoIenNovDIGP5fhzrw">
                 <i class="icon-external-link icon-white"></i> R&eacute;sum&eacute;
               </a>
               <button class="btn btn-primary btn-large dropdown-toggle" data-toggle="dropdown">
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <a href="Colin%20Wood%20-%20Resume.docx">Download as Word Document</a>
-                <a href="Colin%20Wood%20-%20Resume.pdf">Download as PDF Document</a>
+                <a href="Colin%20Wood%20-%20Resume%20(Abridged).docx">Download as Word Document</a>
+                <a href="Colin%20Wood%20-%20Resume%20(Abridged).pdf">Download as PDF Document</a>
               </ul>
             </div>
             <a class="btn-contact btn btn-large" href="mailto:colinjameswood@gmail.com">
