--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               Allow me to tell you a little about myself. I started making websites when I was 15 (circa 2004) as a hobby and ever since then I've had an insatiable passion for web development. I graduated from <a href="http://www.smu.edu/lyle" title="Visit the SMU Lyle School of Engineering Hompage">Southern Methodist University</a> in 2011 with a B.S. in Computer Science. I'm deeply interested in web development and I love to learn new things. I also like cats, beer, and crafts.
             </p>
             <p>
-              I am currently working at <a href="https://codexprotocol.com/">Codex Protocol</a>, building decentralized Ethereum blockchain applications with a focus on backend Node development and DevOps tasks. I am most passionate about JavaScript, but my skills are far more diverse. Check out my r&eacute;sum&eacute;!
+              I am currently working at <a href="https://esprezzo.io/">Esprezzo</a>, building frontend applications in Vue 3 and Tailwind CSS. I am most passionate about JavaScript, but my skills are far more diverse. Check out my r&eacute;sum&eacute;!
             </p>
           </div>
           <div class="hero-buttons">
